--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HeartBeatView Sample</string>
+
+    <string name="action_info">Info</string>
+    <string name="info_details">Open source custom view of a beating heart using scaling animation.</string>
 </resources>
